ajustes de links relativos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DouctorCare</title>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -182,7 +182,7 @@
 
       <div class="col-b">
         <img 
-            src="/assets/mulher negra sorrindo de moleton com as duas maos no peito.png" 
+            src="./assets/mulher negra sorrindo de moleton com as duas maos no peito.png" 
             alt="mulher negra vestindo moleton verde e sorrindo"
         />
       </div>
@@ -293,7 +293,7 @@
 
       <div class="col-b">
         <img 
-        src="/assets/doutor sorrindo com prancheta e pacientes.png" 
+        src="./assets/doutor sorrindo com prancheta e pacientes.png" 
         alt="Doutor Feliz segurando prancheta com pacientes"
         />
       </div>
@@ -413,6 +413,6 @@
 
   <!-- ScrollReveal Lib-->
   <script src="https://unpkg.com/scrollreveal"></script>
-  <script src="main.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
