--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
       <div class="col-b">
         <img 
-          src="/assets/homem negro de moleton mexendo no celular.png" 
+          src="./assets/homem negro de moleton mexendo no celular.png" 
           alt="homem negro de moleton beje mexendo no celular e sorrindo"
         />
       </div>
